[gd_scene load_steps=12 format=3 uid="uid://cjweu5sju1r0q"]

[ext_resource type="Script" path="res://scenes/ui/menu/options_menu.gd" id="1_5yi0t"]
[ext_resource type="Script" path="res://scenes/ui/menu/options_tab_container.gd" id="2_m14l7"]
[ext_resource type="Texture2D" uid="uid://dtdw0ighmdct3" path="res://assets/ui_options_images/movement.png" id="3_0cqol"]
[ext_resource type="PackedScene" uid="uid://bucl1s8eaacb1" path="res://scenes/ui/button/audio_button.tscn" id="3_xjg4v"]
[ext_resource type="Texture2D" uid="uid://d01kifsmbn17" path="res://assets/ui_options_images/inventory.png" id="4_bak3k"]
[ext_resource type="AudioStream" uid="uid://c5yo36w4k7125" path="res://assets/audio/ui/click4.ogg" id="4_nxb77"]
[ext_resource type="AnimationLibrary" uid="uid://clkwayymrxjft" path="res://assets/animations_ui/global_ui.res" id="5_ghfxx"]
[ext_resource type="Texture2D" uid="uid://csgpxae27o8ei" path="res://assets/ui_options_images/pause.png" id="5_njthl"]
[ext_resource type="Texture2D" uid="uid://bf1r24ag1sc17" path="res://assets/ui_options_images/combat.png" id="6_eekar"]

[sub_resource type="Gradient" id="Gradient_al7k4"]
colors = PackedColorArray(0.137255, 0.133333, 0.12549, 1, 0.137255, 0.133333, 0.12549, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_u8kin"]
gradient = SubResource("Gradient_al7k4")

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5yi0t")

[node name="TabContainer" type="TabContainer" parent="."]
custom_minimum_size = Vector2(450, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -31.0
offset_right = 31.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0
script = ExtResource("2_m14l7")

[node name="KeyMappingOptions" type="MarginContainer" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="Background" type="MarginContainer" parent="TabContainer/KeyMappingOptions"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="TextureRect" type="TextureRect" parent="TabContainer/KeyMappingOptions/Background"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = SubResource("GradientTexture1D_u8kin")
flip_v = true

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/KeyMappingOptions/Background"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Movement" type="MarginContainer" parent="TabContainer/KeyMappingOptions/Background/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="TextureRect" type="TextureRect" parent="TabContainer/KeyMappingOptions/Background/VBoxContainer/Movement"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("3_0cqol")
expand_mode = 1
stretch_mode = 4

[node name="InventoryPause" type="MarginContainer" parent="TabContainer/KeyMappingOptions/Background/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/KeyMappingOptions/Background/VBoxContainer/InventoryPause"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/KeyMappingOptions/Background/VBoxContainer/InventoryPause/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="TabContainer/KeyMappingOptions/Background/VBoxContainer/InventoryPause/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("4_bak3k")
expand_mode = 1
stretch_mode = 5

[node name="MarginContainer2" type="MarginContainer" parent="TabContainer/KeyMappingOptions/Background/VBoxContainer/InventoryPause/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="TabContainer/KeyMappingOptions/Background/VBoxContainer/InventoryPause/HBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("5_njthl")
expand_mode = 1
stretch_mode = 5

[node name="Combat" type="MarginContainer" parent="TabContainer/KeyMappingOptions/Background/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="TextureRect" type="TextureRect" parent="TabContainer/KeyMappingOptions/Background/VBoxContainer/Combat"]
custom_minimum_size = Vector2(110, 110)
layout_mode = 2
texture = ExtResource("6_eekar")
expand_mode = 1
stretch_mode = 5

[node name="VideoOptions" type="MarginContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/VideoOptions"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/VideoOptions/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/VideoOptions/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Video display mode"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScreenModeButton" parent="TabContainer/VideoOptions/MarginContainer/VBoxContainer" instance=ExtResource("3_xjg4v")]
unique_name_in_owner = true
layout_mode = 2
text = "Windowed Mode"

[node name="AudioOptions" type="MarginContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/AudioOptions"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/AudioOptions/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/AudioOptions/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/AudioOptions/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/AudioOptions/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Master volume"

[node name="MasterSlider" type="HSlider" parent="TabContainer/AudioOptions/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.0

[node name="MarginContainer2" type="MarginContainer" parent="TabContainer/AudioOptions/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/AudioOptions/MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/AudioOptions/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "SFX volume"

[node name="SfxSlider" type="HSlider" parent="TabContainer/AudioOptions/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.0

[node name="MarginContainer3" type="MarginContainer" parent="TabContainer/AudioOptions/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/AudioOptions/MarginContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/AudioOptions/MarginContainer/VBoxContainer/MarginContainer3/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Game music volume"

[node name="GameMusicSlider" type="HSlider" parent="TabContainer/AudioOptions/MarginContainer/VBoxContainer/MarginContainer3/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.0

[node name="MarginContainer4" type="MarginContainer" parent="TabContainer/AudioOptions/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/AudioOptions/MarginContainer/VBoxContainer/MarginContainer4"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/AudioOptions/MarginContainer/VBoxContainer/MarginContainer4/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Main menu music volume"

[node name="MenuMusicSlider" type="HSlider" parent="TabContainer/AudioOptions/MarginContainer/VBoxContainer/MarginContainer4/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.0

[node name="OpenAiOptions" type="MarginContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/OpenAiOptions"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/OpenAiOptions/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="OpenAiApiKey" type="MarginContainer" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/OpenAiApiKey"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/OpenAiApiKey/HBoxContainer"]
layout_mode = 2
text = "Your OpenAi API key"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OpenAiApiTextEdit" type="LineEdit" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/OpenAiApiKey/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter your OpenAi API key and press enter ..."

[node name="OpenAiProjectSettings" type="MarginContainer" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/OpenAiProjectSettings"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Open AI Project 3 Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OpenAiProjectSettingsVBox" type="VBoxContainer" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/OpenAiProjectSettingsVBox"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/OpenAiProjectSettingsVBox/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/OpenAiProjectSettingsVBox/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.1
text = "GPT Template"

[node name="GptTemplateButton" type="OptionButton" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/OpenAiProjectSettingsVBox/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
item_count = 2
popup/item_0/text = "Strict"
popup/item_1/text = "Loose"
popup/item_1/id = 1

[node name="MarginContainer2" type="MarginContainer" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/OpenAiProjectSettingsVBox"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/OpenAiProjectSettingsVBox/MarginContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/OpenAiProjectSettingsVBox/MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.1
text = "Model Type"

[node name="ModelButton" type="OptionButton" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/OpenAiProjectSettingsVBox/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
item_count = 5
popup/item_0/text = "model-3-5-turbo"
popup/item_1/text = "model-4-turbo"
popup/item_1/id = 1
popup/item_2/text = "model-4o"
popup/item_2/id = 2
popup/item_3/text = "model-4-1"
popup/item_3/id = 3
popup/item_4/text = "model-4-1-mini"
popup/item_4/id = 4

[node name="MarginContainer3" type="MarginContainer" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/OpenAiProjectSettingsVBox"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/OpenAiProjectSettingsVBox/MarginContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/OpenAiProjectSettingsVBox/MarginContainer3/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.1
text = "Temperature (0...1)"

[node name="TemperatureInput" type="LineEdit" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/OpenAiProjectSettingsVBox/MarginContainer3/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter value between 0 and 1"

[node name="MarginContainer4" type="MarginContainer" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/OpenAiProjectSettingsVBox"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/OpenAiProjectSettingsVBox/MarginContainer4"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/OpenAiProjectSettingsVBox/MarginContainer4/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.1
text = "Frequency Penalty (-2...2)"

[node name="FrequencyPenaltyInput" type="LineEdit" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/OpenAiProjectSettingsVBox/MarginContainer4/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter value between -2 and 2"

[node name="HistorySettings" type="MarginContainer" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/HistorySettings"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "History Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HistorySettingsVBox" type="VBoxContainer" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer5" type="MarginContainer" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/HistorySettingsVBox"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/HistorySettingsVBox/MarginContainer5"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/HistorySettingsVBox/MarginContainer5/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.1
text = "Max exchanges to remember (1...10)"

[node name="HistoryMaxExchanges" type="LineEdit" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/HistorySettingsVBox/MarginContainer5/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter value between 1 and 10"

[node name="MarginContainer6" type="MarginContainer" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/HistorySettingsVBox"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/HistorySettingsVBox/MarginContainer6"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/HistorySettingsVBox/MarginContainer6/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.1
text = "Max similar results (1...20)"

[node name="MaxSimilarResults" type="LineEdit" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/HistorySettingsVBox/MarginContainer6/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter value between 1 and 20"

[node name="MarginContainer7" type="MarginContainer" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/HistorySettingsVBox"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/HistorySettingsVBox/MarginContainer7"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/HistorySettingsVBox/MarginContainer7/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.1
text = "Similar results threshold (0...1)"

[node name="SimilarResults" type="LineEdit" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/HistorySettingsVBox/MarginContainer7/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter value between 0 and 1"

[node name="GlobalKnowledgeSettings" type="MarginContainer" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/GlobalKnowledgeSettings"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Global Knowledge Settings
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GlobalKnwoledgeSettingsVBox" type="VBoxContainer" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/GlobalKnwoledgeSettingsVBox"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/GlobalKnwoledgeSettingsVBox/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/GlobalKnwoledgeSettingsVBox/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.1
text = "TODO"

[node name="TbdInput" type="LineEdit" parent="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/GlobalKnwoledgeSettingsVBox/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "TODO"

[node name="MainMenu" parent="." instance=ExtResource("3_xjg4v")]
custom_minimum_size = Vector2(80, 30)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 226.0
offset_top = -31.0
offset_right = 306.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 0
text = "Main Menu"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_nxb77")
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": ExtResource("5_ghfxx")
}

[connection signal="tab_clicked" from="TabContainer" to="." method="_on_tab_container_tab_clicked"]
[connection signal="pressed" from="TabContainer/VideoOptions/MarginContainer/VBoxContainer/ScreenModeButton" to="." method="_on_screen_mode_button_pressed"]
[connection signal="value_changed" from="TabContainer/AudioOptions/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="TabContainer/AudioOptions/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/SfxSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="TabContainer/AudioOptions/MarginContainer/VBoxContainer/MarginContainer3/HBoxContainer/GameMusicSlider" to="." method="_on_game_music_slider_value_changed"]
[connection signal="value_changed" from="TabContainer/AudioOptions/MarginContainer/VBoxContainer/MarginContainer4/HBoxContainer/MenuMusicSlider" to="." method="_on_menu_music_slider_value_changed"]
[connection signal="text_submitted" from="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/OpenAiApiKey/HBoxContainer/OpenAiApiTextEdit" to="." method="_on_open_ai_api_text_edit_text_submitted"]
[connection signal="item_selected" from="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/OpenAiProjectSettingsVBox/MarginContainer/HBoxContainer/GptTemplateButton" to="." method="_on_gpt_template_button_item_selected"]
[connection signal="item_selected" from="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/OpenAiProjectSettingsVBox/MarginContainer2/HBoxContainer/ModelButton" to="." method="_on_model_button_item_selected"]
[connection signal="text_submitted" from="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/OpenAiProjectSettingsVBox/MarginContainer3/HBoxContainer/TemperatureInput" to="." method="_on_temperature_input_text_submitted"]
[connection signal="text_submitted" from="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/OpenAiProjectSettingsVBox/MarginContainer4/HBoxContainer/FrequencyPenaltyInput" to="." method="_on_frequency_penalty_input_text_submitted"]
[connection signal="text_submitted" from="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/HistorySettingsVBox/MarginContainer5/HBoxContainer/HistoryMaxExchanges" to="." method="_on_history_max_exchanges_text_submitted"]
[connection signal="text_submitted" from="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/HistorySettingsVBox/MarginContainer6/HBoxContainer/MaxSimilarResults" to="." method="_on_max_similar_results_text_submitted"]
[connection signal="text_submitted" from="TabContainer/OpenAiOptions/ScrollContainer/MarginContainer/VBoxContainer/HistorySettingsVBox/MarginContainer7/HBoxContainer/SimilarResults" to="." method="_on_similar_results_text_submitted"]
[connection signal="pressed" from="MainMenu" to="." method="_on_main_menu_pressed"]
